Add navigation links and hover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header" role="banner">
     <div class="grid grid-middle gutter bgcolor">
       <h1 class="logo push-0 unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
-        <i class="icon i-64"><img src="images/placeholderlogo.png" alt="" role="presentation"></i>
+        <i class="icon i-48"><img src="images/placeholder.svg" alt="" role="presentation"></i>
         <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Loyal Rescue </span></a>
       </h1>
       <nav role="navigation" id="nav" class="nav unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
@@ -32,3 +32,6 @@
       </nav>
     </div>
   </header>
+
+</body>
+</html>
