Customize the banner and banner content

--- a/index.html
+++ b/index.html
@@ -24,14 +24,25 @@
       </h1>
       <nav role="navigation" id="nav" class="nav unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <ul class="navstyle bold list-group-inline kilo push-0">
-          <li><a class="navstyle ib gutter-1-4" href="index.html"><span>Home</span></a></li>
-          <li><a class="navstyle ib gutter-1-4" href="rescues.html"><span>Rescues</span></a></li>
-          <li><a class="navstyle ib gutter-1-4" href="adopt.html"><span>Adopt</span></a></li>
-          <li> <a class="navstyle ib gutter-1-4" href="faq.html">FAQ</a></li>
+          <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="index.html"><span>HOME</span></a></li>
+          <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="rescues.html"><span>RESCUES</span></a></li>
+          <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="adopt.html"><span>ADOPT</span></a></li>
+          <li class="gutter-1-4"> <a class="micro navstyle ib gutter-1-4" href="faq.html">FAQ</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
+<div>
+  <div class="banner">
+    <div class="banner-content pad-b gutter-2">
+      <h2 class="push-0 zetta">Our favorite breed is rescued</h2>
+      <p class="max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
+          <a class="bannerbtn btn milli push-r-3-4" href="#"> Button 1 </a>
+          <a class="bannerbtn btn milli" href="#"> Button 2 </a>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
