Change same elements

--- a/index.html
+++ b/index.html
@@ -18,31 +18,102 @@
   </ul>
   <header class="header" role="banner">
     <div class="grid grid-middle gutter bgcolor">
-      <h1 class="logo push-0 unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
+      <p class="logo push-0 unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <i class="icon i-48"><img src="images/placeholder.svg" alt="" role="presentation"></i>
         <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Loyal Rescue </span></a>
-      </h1>
+      </p>
       <nav role="navigation" id="nav" class="nav unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <ul class="navstyle bold list-group-inline kilo push-0">
           <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="index.html"><span>HOME</span></a></li>
           <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="rescues.html"><span>RESCUES</span></a></li>
           <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="adopt.html"><span>ADOPT</span></a></li>
-          <li class="gutter-1-4"> <a class="micro navstyle ib gutter-1-4" href="faq.html">FAQ</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-<div>
-  <div class="banner">
-    <div class="banner-content pad-b gutter-2">
-      <h2 class="push-0 zetta">Our favorite breed is rescued</h2>
-      <p class="max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
-          <a class="bannerbtn btn milli push-r-3-4" href="#"> Button 1 </a>
-          <a class="bannerbtn btn milli" href="#"> Button 2 </a>
+  <main>
+    <div>
+      <div class="banner">
+        <div class="banner-content pad-b gutter-2">
+          <h1 class="push-0 zetta">Our favorite breed is rescued</h1>
+          <p class="push-3-4 max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
+          <a class="bannerbtn btn milli push-r-1-2" href="#"> Browse Pets </a>
+          <a class="bannerbtn btn milli" href="#"> Learn More </a>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+
+    <article class="wrapper">
+      <div class="gutter">
+        <h2 class="push-0 zetta pad-t-2 gutter-2"> Featured Pets </h2>
+      </div>
+      <div class="gutter-2 center-flow pad-b-2 gutter grid graybg">
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1 m-1-2 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-3-4 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"></span>
+            <p class="gutter cardcaption kilo">pet 1</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1 m-1-2 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-3-4 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"> </span>
+            <p class="gutter cardcaption kilo">pet 2</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1 m-1-2 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-3-4 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"> </span>
+            <p class="gutter cardcaption kilo">pet 3</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1 m-1-2 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-3-4 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"></span>
+            <p class="gutter cardcaption kilo">pet 4</p>
+          </figure>
+        </div>
+      </div>
+    </article>
+  </main>
+
+  <footer role="contentinfo" class="gutter pad-t pad-b bgcolor">
+    <div class="grid">
+      <h2 class="push-0 unit xs-1 s-1 m-1-4 l-1-4 pad-t-1-2 pad-b-1-2">
+        <i class="icon i-32"><img src="images/placeholder.svg" alt="" role="presentation"></i>
+        <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Dex </span></a>
+      </h2>
+
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <h3 class="kilo push-0"> Company</h3>
+        <ul class="list-group">
+          <li><a class="footerlink micro" href="#"> About us</a></li>
+          <li><a class="footerlink micro" href="#"> Pricing</a></li>
+          <li><a class="footerlink micro" href="#"> Terms of use</a></li>
+          <li><a class="footerlink micro" href="#"> Privacy policy</a></li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <h3 class="kilo push-0"> Support</h3>
+        <ul class="list-group">
+          <li><a class="footerlink micro" href="#"> FAQ</a></li>
+          <li><a class="footerlink micro" href="#"> Contact us</a></li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <h3 class="kilo push-0"> Email us at:</h3>
+        <a class="footerlink micro" href="#"> dex@gmail.com</a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
