Add embed class

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <li><a href="#nav"> Jump to navigation</a></li>
     <li><a href="#main"> Jump to main content</a></li>
   </ul>
-  <header class="header" role="banner">
-    <div class="grid grid-middle gutter bgcolor">
+  <header role="banner">
+    <div class="header grid grid-middle gutter bgcolor">
       <p class="logo push-0 unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <i class="icon i-48"><img src="images/placeholder.svg" alt="" role="presentation"></i>
         <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Loyal Rescue </span></a>
@@ -34,7 +34,7 @@
 
   <main>
     <div>
-      <div class="banner">
+      <div class="embed embed-16by19 banner">
         <div class="banner-content pad-b gutter-2">
           <h1 class="push-0 zetta">Our favorite breed is rescued</h1>
           <p class="push-3-4 max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
