--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Solway:700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
 </head>
 
 <body>
@@ -36,7 +38,7 @@
     <div>
       <div class="embed embed-16by19 banner">
         <div class="banner-content pad-b gutter-2">
-          <h1 class="push-0 zetta">Our favorite breed is rescued</h1>
+          <h1 class="bannertitle push-0 zetta">Our favorite breed is rescued</h1>
           <p class="push-3-4 max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
           <a class="bannerbtn btn milli push-r-1-2" href="#"> Browse Pets </a>
           <a class="bannerbtn btn milli" href="#"> Learn More </a>
@@ -89,7 +91,7 @@
     <div class="grid">
       <h2 class="push-0 unit xs-1 s-1 m-1-4 l-1-4 pad-t-1-2 pad-b-1-2">
         <i class="icon i-32"><img src="images/placeholder.svg" alt="" role="presentation"></i>
-        <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Dex </span></a>
+        <a class="icon-link" href="index.html"><span class="name tera icon-label text-left">Loyal Rescue </span></a>
       </h2>
 
       <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
