--- a/rescues.html
+++ b/rescues.html
@@ -2,13 +2,15 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title> Available Dogs </title>
+  <title>Available Dogs</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Solway:700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
 </head>
 
 <body>
@@ -16,13 +18,14 @@
     <li><a href="#nav"> Jump to navigation</a></li>
     <li><a href="#main"> Jump to main content</a></li>
   </ul>
-  <header class="header" role="banner">
-    <div class="grid grid-middle gutter bgcolor">
+
+  <header role="banner">
+    <div class="header grid grid-middle gutter bgcolor">
       <p class="logo push-0 unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
-        <i class="icon i-48"><img src="images/placeholder.svg" alt="" role="presentation"></i>
+        <i class="embed icon i-48"><img class="embed-item" src="images/placeholder.svg" alt="" role="presentation"></i>
         <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Loyal Rescue </span></a>
       </p>
-      <nav role="navigation" id="nav" class="nav unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
+      <nav role="navigation" id="nav" tabindex="0" class="nav unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
         <ul class="navstyle bold list-group-inline kilo push-0">
           <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="index.html"><span>HOME</span></a></li>
           <li class="gutter-1-4"><a class="micro navstyle ib gutter-1-4" href="rescues.html"><span>RESCUES</span></a></li>
@@ -32,89 +35,130 @@
     </div>
   </header>
 
-  <main>
-    <h1 class="push-0 zetta pad-t-2 gutter-2"> Available Pets </h1>
-    <div class="gutter-2 center-flow pad-b-2 gutter grid graybg">
+  <main role="main" id="main" tabindex="0">
+    <section>
+      <h1 class="push-0 zetta pad-t-2 gutter-2"> Available Pets </h1>
+      <div class="gutter-2 center-flow pad-b-2 gutter grid graybg">
 
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"></span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"></span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"> </span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"> </span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"></span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"></span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"> </span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"> </span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
+        <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
+          <figure class="card">
+            <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
+            <span class="text-upper bold"></span>
+            <p class="gutter cardcaption kilo bold push-0">Name</p>
+            <p class="gutter push-0"> Age: </p>
+            <p class="gutter push-1-2"> Breed:</p>
+          </figure>
+        </div>
+
       </div>
 
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"> </span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
+      <div class="gutter-1-2">
+        <div class="gutter-2">
+          <a class="next bannerbtn btn milli push-r-1-2" href="#"> Next Page</a>
+        </div>
       </div>
-
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"> </span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
-      </div>
-
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"></span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
-      </div>
-
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"></span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
-      </div>
-
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"> </span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
-      </div>
-
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"> </span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
-      </div>
-
-      <div class="gutter-1-2 pad-t-2 unit xs-1 s-1-2 m-1-3 l-1-4 xl-1-4">
-        <figure class="card">
-          <i> <img class="island-1-2 img-flex push-1-2 center-block" src="images/placeholdersquare.png" alt=""> </i>
-          <span class="text-upper bold"></span>
-          <p class="gutter cardcaption kilo bold push-0">Name</p>
-          <p class="gutter push-0"> Age: </p>
-          <p class="gutter push-1-2"> Breed:</p>
-        </figure>
-      </div>
-
-    </div>
+    </section>
   </main>
+
+  <footer role="contentinfo" class="gutter pad-t pad-b bgcolor">
+    <div class="grid">
+      <h2 class="push-0 unit xs-1 s-1 m-1-4 l-1-4 pad-t-1-2 pad-b-1-2">
+        <i class="icon i-32"><img src="images/placeholder.svg" alt="" role="presentation"></i>
+        <a class="icon-link" href="index.html"><span class="name tera icon-label text-left">Loyal Rescue </span></a>
+      </h2>
+
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <h3 class="kilo push-0"> Company</h3>
+        <ul class="list-group">
+          <li><a class="footerlink micro" href="#"> About us</a></li>
+          <li><a class="footerlink micro" href="#"> Pricing</a></li>
+          <li><a class="footerlink micro" href="#"> Terms of use</a></li>
+          <li><a class="footerlink micro" href="#"> Privacy policy</a></li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <h3 class="kilo push-0"> Support</h3>
+        <ul class="list-group">
+          <li><a class="footerlink micro" href="#"> FAQ</a></li>
+          <li><a class="footerlink micro" href="#"> Contact us</a></li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <h3 class="kilo push-0"> Email us at:</h3>
+        <a class="footerlink micro" href="#"> dex@gmail.com</a>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
