--- a/adopt.html
+++ b/adopt.html
@@ -22,7 +22,7 @@
   <header role="banner">
     <div class="header grid grid-middle gutter bgcolor">
       <p class="logo push-0 unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
-        <i class="icon i-48 embed"><img class="embed-item" src="images/placeholder.svg" alt="" role="presentation"></i>
+        <i class="icon i-48"><img class="embed-item" src="images/placeholder.svg" alt="" role="presentation"></i>
         <a class="icon-link" href="index.html"><span class="name exa icon-label text-left">Loyal Rescue </span></a>
       </p>
       <nav role="navigation" id="nav" tabindex="0" class="nav unit xs-1 s-1 m-1-2 l-1-2 pad-t-1-2 pad-b-1-2">
@@ -35,79 +35,81 @@
     </div>
   </header>
 
-  <main class="gutter" role="main" id="main" tabindex="0">
-    <section>
-      <div class="push">
-        <div class="banner" role="complementary">
-          <div class="banner-content pad-b gutter-2">
-            <h1 class="push-0 zetta">Adopt now!</h1>
-            <p class="max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
-          </div>
+  <main role="main" id="main" tabindex="0">
+    <div>
+      <div class="push embed embed-16by19 banner">
+        <div class="banner-content pad-b gutter-2">
+          <h1 class="bannertitle push-0 zetta">Adopt now!</h1>
+          <p class="push-3-4 max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
+          <a class="bannerbtn btn milli push-r-1-2" href="#"> Browse Pets </a>
+          <a class="bannerbtn btn milli" href="#"> Learn More </a>
         </div>
       </div>
-    </section>
+    </div>
 
-    <article>
-      <form method="POST" action="gala0058@algonquinlive.com">
-        <div class="grid">
-          <div class="leftform unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-            <label for="name" class="push-1-8"> Full Name</label>
-            <input id="name" name="name" class="push-1-8" required>
-            <p class="micro italic"></p>
+    <article class="wrapper">
+      <div class="gutter">
+
+        <form method="POST" action="gala0058@algonquinlive.com">
+          <div class="grid">
+            <div class="leftform unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <label for="name" class="push-1-8"> Full Name</label>
+              <input id="name" name="name" class="push-1-8" required>
+              <p class="micro italic"></p>
+            </div>
+
+            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <label for="dogname" class="push-1-8"> Name of the dog </label>
+              <input id="dogname" name="dogname" class="push-1-8" required>
+              <p class="micro italic"></p>
+            </div>
+
+            <div class="leftform unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <label for="address" class="push-1-8"> Street Address </label>
+              <input id="address" name="address" class="push-1-8" required>
+              <p class="micro italic"></p>
+            </div>
+
+            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <label for="city" class="push-1-8"> City </label>
+              <input id="city" name="city" class="push-1-8" required>
+              <p class="micro italic"></p>
+            </div>
+
+            <div class="leftform unit xs-1 s-1 m-1-2 l-1-2 xl-1-2pad-b-3-4 push-1-2 pad-t-1-8">
+              <label for="province" class="push-1-8"> Province </label>
+              <select id="province" name="province" class="push-1-8">
+                <option>Select a province</option>
+                <option>Alberta</option>
+                <option>British Columbia</option>
+                <option>Manitoba</option>
+                <option>New Brunswick</option>
+                <option>Newfoundland & Labrador</option>
+                <option>Northwest Territories</option>
+                <option>Nova Scotia</option>
+                <option>Nunavut</option>
+                <option>Ontario</option>
+                <option>Prince Edward Island</option>
+                <option>Québec</option>
+                <option>Saskatchewan</option>
+                <option>Yukon</option>
+              </select>
+            </div>
+
+            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+              <label for="nickname" class="push-1-8"> Postal Code </label>
+              <input id="nickname" name="nickname" class="push-1-8" required>
+              <p class="micro italic"></p>
+            </div>
+
           </div>
-
-          <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-            <label for="dogname" class="push-1-8"> Name of the dog </label>
-            <input id="dogname" name="dogname" class="push-1-8" required>
-            <p class="micro italic"></p>
-          </div>
-
-          <div class="leftform unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-            <label for="address" class="push-1-8"> Street Address </label>
-            <input id="address" name="address" class="push-1-8" required>
-            <p class="micro italic"></p>
-          </div>
-
-          <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-            <label for="city" class="push-1-8"> City </label>
-            <input id="city" name="city" class="push-1-8" required>
-            <p class="micro italic"></p>
-          </div>
-
-          <div class="leftform unit xs-1 s-1 m-1-2 l-1-2 xl-1-2pad-b-3-4 push-1-2 pad-t-1-8">
-            <label for="province" class="push-1-8"> Province </label>
-            <select id="province" name="province" class="push-1-8">
-              <option>Select a province</option>
-              <option>Alberta</option>
-              <option>British Columbia</option>
-              <option>Manitoba</option>
-              <option>New Brunswick</option>
-              <option>Newfoundland & Labrador</option>
-              <option>Northwest Territories</option>
-              <option>Nova Scotia</option>
-              <option>Nunavut</option>
-              <option>Ontario</option>
-              <option>Prince Edward Island</option>
-              <option>Québec</option>
-              <option>Saskatchewan</option>
-              <option>Yukon</option>
-            </select>
-          </div>
-
-          <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-            <label for="nickname" class="push-1-8"> Postal Code </label>
-            <input id="nickname" name="nickname" class="push-1-8" required>
-            <p class="micro italic"></p>
-          </div>
-
-        </div>
-        <button class="next bannerbtn btn milli push-r-1-2" type="submit">Submit</button>
-      </form>
-
+          <button class="next bannerbtn btn milli push-r-1-2" type="submit">Submit</button>
+        </form>
+      </div>
     </article>
   </main>
 
-  <footer role="contentinfo" class="gutter pad-t pad-b bgcolor">
+  <footer role="contentinfo" class="gutter pad-t pad-b footerbg">
     <div class="grid">
       <h2 class="push-0 unit xs-1 s-1 m-1-4 l-1-4 pad-t-1-2 pad-b-1-2">
         <i class="icon i-32"><img src="images/placeholder.svg" alt="" role="presentation"></i>
