--- a/adopt.html
+++ b/adopt.html
@@ -39,7 +39,7 @@
     <div>
       <div class="push embed embed-16by19 banner">
         <div class="banner-content pad-b gutter-2">
-          <h1 class="bannertitle push-0 zetta">Adopt now!</h1>
+          <h1 class="bannertitle push-0 zetta">Adopt now!!</h1>
           <p class="push-3-4 max-length-no-center milli">Loyal Rescue, established in 2008, in Ontario, Canada, is a foster-based, all-volunteer rescue that strives to rehabilitate dogs both physically and emotionally, making them ready for adoption. </p>
           <a class="bannerbtn btn milli push-r-1-2" href="#"> Browse Pets </a>
           <a class="bannerbtn btn milli" href="#"> Learn More </a>
